objects/vlocity_ins__SyncDeltaObject__c.object
<CustomObject>
    <fields>
        <fullName>vlocity_ins__Action__c</fullName>
        <label>Action</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Add</fullName>
                </value>
                <value>
                    <fullName>Modify</fullName>
                </value>
                <value>
                    <fullName>Delete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__Data__c</fullName>
        <label>Data</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ObjectId__c</fullName>
        <label>ObjectId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Sync Delta Object</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Sync Delta Object Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sync Delta Objects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>